--- a/03-client-server/views/index.ejs
+++ b/03-client-server/views/index.ejs
@@ -3,8 +3,19 @@
   <head>
     <title>Full Stack Encryption - Demo 03</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
+    <p>The server sent the ciphertext encoded in Base64</p>
+    <p id="base64"><%= data %></p>
+    <p><span id="open-form">Click me</span> to decrypt.</p>
+    <p id="plaintext"></p>
+    <form action="#" id="private-key-form">
+      <p>Paste your private key here. It's in the main directory of the repository: <i>private_key.pem</i></p>
+      <textarea id="private-key"></textarea>
+      <br>
+      <input id="decrypt" type="submit" value="Decrypt!">
+    </form>
     <script src="/static/script.js"></script>
   </body>
 </html>
