--- a/03-client-server/views/index.ejs
+++ b/03-client-server/views/index.ejs
@@ -4,18 +4,22 @@
     <title>Full Stack Encryption - Demo 03</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/static/style.css">
+    <script src="/static/jsencrypt.js"></script>
   </head>
   <body>
     <p>The server sent the ciphertext encoded in Base64</p>
     <p id="base64"><%= data %></p>
     <p><span id="open-form">Click me</span> to decrypt.</p>
-    <p id="plaintext"></p>
     <form action="#" id="private-key-form">
-      <p>Paste your private key here. It's in the main directory of the repository: <i>private_key.pem</i></p>
+      <p>
+        Paste your private key here. It's in the main directory of the repository:
+        <i>private_key.pem</i>
+      </p>
       <textarea id="private-key"></textarea>
       <br>
       <input id="decrypt" type="submit" value="Decrypt!">
     </form>
+    <p id="plaintext"></p>
     <script src="/static/script.js"></script>
   </body>
 </html>
